whereami-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: whereami-gateway
  namespace: whereami
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
    #port:
    #  name: https
    #  number: 443
    #  protocol: HTTPS
    #tls:
    #  mode: SIMPLE
    #  credentialName: edge2mesh-credential
