destination_rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: whereami
  namespace: whereami
spec:
  host: whereami.whereami.svc.cluster.local
  trafficPolicy:
    connectionPool:
      http:
        maxRequestsPerConnection: 0
    loadBalancer:
      simple: LEAST_REQUEST
      localityLbSetting:
        enabled: true
        #distribute:
        #  - from: us-central1/*
        #    to:
        #      "us-central1/*": 100
        #  - from: us-east4/*
        #    to:
        #      "us-east4/*": 100
        failover:
          - from: us-central1
            to: us-east4
          - from: us-east4
            to: us-central1
    outlierDetection:
      consecutive5xxErrors: 1
      interval: 1s
      baseEjectionTime: 1m
