whereami-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: whereami-vs
  namespace: whereami
spec:
  gateways:
  - whereami/whereami-gateway
  hosts:
  - 'whereami.example.com'
  http:
  - route:
    - destination:
        host: whereami
        port:
          number: 80
